Eraser/exp/baseline_setting_eraser_new.txt
  File "main.py", line 87
    if self.args['write'] == True:
    ^
IndentationError: unexpected indent
